# cppl_dip

./: .gitignore  CMakeLists.txt  test.INI
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  IniParser.cpp  IniParser.h  IniParserException.cpp  IniParserException.h  Logger.cpp  Logger.h  ParserTools.cpp  ParserTools.h  Strings.cpp  Strings.h
test/: CMakeLists.txt  test-main.cpp
